# mars-daemons

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  fly.toml  package.json  pyproject.toml
.github/workflows/: build-mars-runtime.yml  ci.yml
apps/mars-control/docs/: split-plan.md
apps/mars-control/templates/: tracker-ops-assistant.prompt.md  tracker-ops-assistant.yaml
apps/mars-runtime/: Dockerfile  claude_code_settings.json  start.sh
apps/mars-runtime/hooks/: deny-protected-edit.sh  deny-secret-read-bash.sh
apps/mars-runtime/src/: supervisor.py  supervisor_recovery.py
clients/typescript/: LICENSE  README.md  package.json  tsconfig.json
clients/typescript/src/: index.ts
docs/: security.md  v1.1-backlog.md
docs/decisions/: 001-oauth-status.md  002-cold-boot-timing.md
docs/planning/: v1-plan.md
docs/planning/epics/: epic-00-foundation-and-spikes.md  epic-01-supervisor-and-parser.md  epic-02-event-forwarding-and-sse.md  epic-03-fly-deploy-and-docker.md  epic-04-web-ui-and-auth.md  epic-05-multi-session-and-recovery.md  epic-06-local-immutability-memory.md  epic-07-dev-dogfood.md  epic-08-operator-turnkey.md  epic-09-security-and-launch.md  index.md
examples/: orion-daemon.yaml  pr-reviewer-agent.yaml
spikes/: 01-claude-code-oauth.sh  02-stream-json-capture.sh  03-permission-roundtrip.md
src/mars_runtime/: __init__.py  __main__.py  _bootstrap.py  _paths.py  _rpc.py  _worker.py  agent.py  api.py  events.py  llm_client.py  schema.py  session_store.py  workspace.py
src/mars_runtime/broker/: env.py  hardening.py  process.py
tests/: test_agent_loop.py  test_anthropic_client.py  test_api.py  test_app.py  test_azure_openai.py  test_bootstrap.py  test_claude_cli_provider.py  test_cli.py  test_codex_cli_provider.py  test_config.py  test_daemon_auth.py  test_daemon_cancel.py  test_daemon_endpoints.py  test_daemon_files.py  test_daemon_health.py  test_daemon_isolation.py  test_daemon_ownership.py  test_daemon_parallel.py  test_daemon_replay.py  test_daemon_resolve.py  test_daemon_sse.py  test_daemon_timeout.py  test_daemon_turns.py  test_file_transfer.py  test_llm_client.py  test_llm_registry.py  test_llm_stream_anthropic.py  test_llm_stream_openai.py  test_local_conversation_store.py  test_provider_registry.py  test_runtime_tools.py  test_schema.py  test_secrets_isolation.py  test_session_store.py  test_sessions.py  test_tools.py  test_workspace.py
tests/cli/: test_deploy_command.py  test_edit_prompt.py  test_fly_client.py  test_init.py  test_memory_command.py  test_runtime_local.py  test_ssh_command.py
tests/contract/: test_claude_code_stream.py
tests/control/: test_auth_magic_link.py  test_fly_client.py  test_ingest.py  test_prompt_update.py  test_rate_limit.py  test_session_proxy.py  test_sse_stream.py  test_template_tracker_ops.py  test_templates_discovery.py
tests/integration/: test_event_pipeline.py
tests/runtime/: test_claude_code_hooks.py  test_claude_code_stream.py  test_codex.py  test_event_forwarder.py  test_event_types.py  test_memory_capture.py  test_memory_sync.py  test_permissions.py  test_session_handle.py  test_session_manager.py  test_session_manager_cap.py  test_supervisor_api.py  test_supervisor_recovery.py
tests/schema/: test_agent_config.py
(+136 files in other folders)
