[project]
name = "mars-daemons"
version = "0.1.0"
description = "Mars — a cloud platform for hosting AI daemons powered by Claude Code and Codex CLIs."
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "boto3>=1.42.88",
    "click>=8.1",
    "email-validator>=2.3.0",
    "fastapi>=0.135.3",
    "pydantic>=2.6",
    "pyjwt>=2.12.1",
    "pyyaml>=6.0",
    "uvicorn>=0.44.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "moto>=5.1.22",
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [
    "apps/mars-control/backend/src",
    "apps/mars-runtime/src",
    "packages/mars-cli/src",
]
python_files = ["test_*.py"]
addopts = "-q"
