[project]
name = "mars-runtime"
version = "0.2.0"
description = "Minimal agent runtime — one script, pluggable LLM backend, stdin/stdout."
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "anthropic>=0.40",
    "httpx>=0.28",
    "pydantic>=2.6",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
azure = ["openai>=1.0"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]
addopts = "-q"
